[package]
name = "balatro-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
dotenvy = "0.15.7"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.44.1", features = ["rt"] }
