[package]
name = "balatro-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
dotenvy = "0.15.7"
num-bigint = "0.4.6"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio",
  "bigdecimal",
] }
sqlx-pg-uint = "0.10.1"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.47.0", features = ["rt"] }
